--- a/feelgood/HMML CSS/site watch/style.css
+++ b/feelgood/HMML CSS/site watch/style.css
@@ -1,4 +1,14 @@
     /* ctrl+E увидеть какой селектор применен к тегу */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html,
+body {
+    height: 100%;
+}
+
 
 body {
     background-color: #f8f8f8;
@@ -206,14 +216,15 @@ hr {
     color: black;
 }
 .container {
+    display: flex;
+    flex-direction: column;
     width: 80%;
-    position: relative;
+    height: 100%;
     margin: 0 auto;
 }
 
 .header {
-    position: relative;
-    width: 100%;
+    flex: 0 0 auto;
     height: 220px;
     background-image: url(img/header_img.jpg);
     background-repeat: no-repeat;
@@ -250,9 +261,8 @@ img[alt=logo_img] {
 
 
 .footer {
-    position: relative;
-    width: 100%;
-    height: 130px;
+    flex: 0 0 auto;
+    height: 150px;
     background-color: grey;
 }
 
@@ -260,6 +270,7 @@ img[alt=logo_img] {
     text-align: right;
     margin-right: 15%;
     padding-top: 3%;
+    text-align: justify
 }
 
 .footer_text:after {
@@ -314,8 +325,7 @@ img[class="foto"]:hover {
 }
 
 .content {
-    position: relative;
-    width: 100%;
+    flex: 1 1 auto;
 }
 .catalog {
     text-align: center;
@@ -331,4 +341,8 @@ img[class="foto"]:hover {
     display: inline-block;
     text-align: center;
     border: 2px solid transparent;
+}
+
+div {
+    
 }
