--- a/feelgood/HMML CSS/assets макет/style.css
+++ b/feelgood/HMML CSS/assets макет/style.css
@@ -304,7 +304,7 @@ img[alt="logo"] {
     font-size: 36px;
     font-weight: 700;
     margin-top: 1411px;
-    width: 100%;
+    width: 1366px;
 }
 
 .trending p {
@@ -326,7 +326,7 @@ table {
     border-spacing: 10px 10px;
 }
 
-td:hover {
+.trending td:hover {
     outline: 1px solid #6c6c6c;
 }
 
@@ -466,7 +466,8 @@ img[alt="5_sm"]{
 .footer_1 .p_2 {
     margin: 0px 0px 0px 106px;
     color:  #212121;
-    font-size: 62px;
+    font-size: 62px;    font-size: 62px;
+
     font-weight: 100;
     line-height: 72px;
 }
@@ -486,3 +487,56 @@ img[alt="5_sm"]{
     margin-left: 10px;
 }
 
+.footer_2_in {
+    position: absolute;
+    margin: 120px 0 0 99px;
+    
+}
+
+.footer_2_in table {
+    margin: 0px;
+    padding: 0px;
+    text-align: left;
+    width: 135%;
+}
+
+.footer_2_in .r_1 {
+    color:  #6c6c6c;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px;
+
+}
+
+.footer_2_in .r2c1_4 {
+    color:  #212121;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+}
+
+.footer_2_in .r2c2_3 {
+    color:  #212121;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 26px;
+}
+
+.footer_2_in input{
+    border-width: 1px;
+    border-color:  #d9dee1;
+    border-style: solid;
+    background-color:  #ffffff;
+    width: 368px;
+    height: 46px;
+    }
+
+input[placeholder="your email address"] {
+    font-family: Montserrat;
+    color:  #6c6c6c;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    text-align: left;
+    padding-left: 22px;
+}
