--- a/feelgood/HMML CSS/assets макет/style.css
+++ b/feelgood/HMML CSS/assets макет/style.css
@@ -18,8 +18,6 @@ img[alt="logo"] {
     margin-left: 98px;
 }
 
-   
-
 .menu {
     float: right;
     list-style-type: none;
@@ -43,14 +41,15 @@ img[alt="logo"] {
     padding: 0 13px;
 }
 
-.menu li .point:hover{
+.menu li .point:hover {
     color: #212121;
     border-bottom: 3px solid #212121;
 }
 
 .menu li:last-child {
-    height: 12px;
-    margin-left: 10px;
+    position: relative;
+    left: 10px;
+    top: 10px;
 }
 
 .head_text {
@@ -244,13 +243,14 @@ img[alt="logo"] {
 .promo {
     position: absolute;
     margin-top: 609px;
+    width: 1366px;
 }
 
 .promo1,
 .promo2 {
     height: 683px;
     width: 683px;
-    overflow: hidden;
+    float: left;
 }
 
 .promo1 {
@@ -262,7 +262,8 @@ img[alt="logo"] {
     background-image: url(img/promo-img.jpg);
 }
 
-.promo .p1 {
+.promo .p1,
+.catalog_promo .p1 {
     color: #1e88e5;
     font-size: 18px;
     font-weight: 700;
@@ -271,7 +272,8 @@ img[alt="logo"] {
     margin-top: 228px;
 }
 
-.promo .p2 {
+.promo .p2,
+.catalog_promo .p2 {
     color: #212121;
     font-size: 36px;
     font-weight: 700;
@@ -279,7 +281,8 @@ img[alt="logo"] {
     margin-top: -20px;
 }
 
-.promo .p3 {
+.promo .p3,
+.catalog_promo .p3{
     color: #6c6c6c;
     font-size: 13.99px;
     font-weight: 300;
@@ -295,7 +298,8 @@ img[alt="logo"] {
     margin-left: 50px;
 }
 
-.trending {
+.trending
+{
     position: absolute;
     color: #212121;
     font-size: 36px;
@@ -316,14 +320,16 @@ img[alt="logo"] {
     margin-left: 1090px;
 }
 
-table {
+.catalog_short,
+ table{
     margin-left: 98px;
     margin-top: 99px;
     text-align: center;
     border-spacing: 10px 10px;
 }
 
-.trending td:hover a{
+.trending td:hover img[alt="cat_img"],
+.catalog_trending td:hover img[alt="cat_img"]{
     outline: 1px solid #6c6c6c;
 }
 
@@ -451,8 +457,6 @@ img[alt="5_sm"] {
 
 .footer_2 {
     background-image: url(img/footer/footer-back.jpg);
-    height: 384px;
-    width: 100%;
 }
 
 .footer_1 .p_1 {
@@ -491,6 +495,7 @@ img[alt="5_sm"] {
     margin: 0 auto;
     width: 1132px;
     padding-top: 120px;
+    
 }
 
 .footer_2_in table {
@@ -576,6 +581,9 @@ img[alt='social'] {
     padding-left: 140px;
 }
 
+
+/*--------------------------CATALOG--------------------------*/
+
 .catalog_header {
     background-image: url(img/catalog/hero-back.jpg);
     width: 1366px;
@@ -593,7 +601,8 @@ img[alt='social'] {
 .catalog_nav {
     margin: 60px 0px 0px 98px;
     padding: 0;
-
+    height: 50px;
+    box-sizing: border-box;
 }
 
 .catalog_nav li {
@@ -609,12 +618,27 @@ img[alt='social'] {
     font-weight: 700;
     line-height: 43px;
     padding: 0 35px 0px 5px;
-    border-bottom: 1px solid #212121; 
+    border-bottom: 1px solid #212121;
 }
 
-
 .catalog_nav a:hover,
-.catalog_nav a:focus{
+.catalog_nav a:focus {
     color: #212121;
     border-bottom: 3px solid #212121;
+}
+
+.catalog_trending{
+    margin: -60px 0px 0px -12px;
+}
+
+.refresh {
+    width: 49px;
+    margin: 0 auto;
+    margin-top: 60px;
+}
+
+.catalog_promo {
+    margin-top: 150px;
+    height: 683px;
+
 }
