--- a/feelgood/HMML CSS/Задание_6_ЛипинД/style.css
+++ b/feelgood/HMML CSS/Задание_6_ЛипинД/style.css
@@ -5,25 +5,25 @@ body {
     padding: 0;
 }
 
-.featured_picture .c1,
-.featured_picture .c2 {
+.c1,
+.c2 {
     width: 270px;
     height: 270px;
     float: left;
     margin-right: 30px;
 }
 
-.featured_picture .c1 {
+.c1 {
     background: url(img/product-1.jpg);
 }
 
-.featured_picture .c2 {
+.c2 {
     display: none;
     padding: 24px;
     box-sizing: border-box;
 }
 
-.featured_picture .c1:hover .c2 {
+.c1:hover .c2 {
     background: rgba(255,255,255,0.8);
     /*opacity: 0.2;*/
     display: block;
@@ -31,9 +31,9 @@ body {
 }
 
 
-/*-----------------------------------*/
+/*----------------TEXT STYLE -------------------*/
 
-.featured_picture .c2 h3 {
+.c2 h3 {
     color: #212121;
     font-size: 21.91px;
     font-weight: 700;
@@ -42,7 +42,7 @@ body {
     transform: scaleX(1.0041);
 }
 
-.featured_picture .c2 p {
+.c2 p {
     color: #6c6c6c;
     font-size: 13.94px;
     font-weight: 300;
@@ -50,7 +50,7 @@ body {
     text-align: center;
 }
 
-.featured_picture .c2 a {
+.c2 a {
     display: inline-block;
     border-radius: 50%;
     background-color: #ffffff;
@@ -61,7 +61,7 @@ body {
     margin-top: 38px;
 }
 
-.featured_picture .c2 img {
+.c2 img {
     margin-left: 20px;
     margin-top: 15px;
 }
