--- a/feelgood/HMML CSS/Задание_6_ЛипинД/style.css
+++ b/feelgood/HMML CSS/Задание_6_ЛипинД/style.css
@@ -18,14 +18,14 @@ body {
 }
 
 .c2 {
+    background: rgba(255,255,255,0.8);     /*opacity: 0.2;*/
     display: none;
     padding: 24px;
     box-sizing: border-box;
+
 }
 
 .c1:hover .c2 {
-    background: rgba(255,255,255,0.8);
-    /*opacity: 0.2;*/
     display: block;
     border: 1px solid #9c9c9c;
 }
