макет 1 урок день второй

--- a/feelgood/3. Основная программа/урок 1/дз/style/style.css
+++ b/feelgood/3. Основная программа/урок 1/дз/style/style.css
@@ -78,7 +78,7 @@ header .headImg {
   height: 418px;
   background-color: #f5f5f5;
 }
-.dignity h2 {
+.dignity .h2 {
   color: #445161;
   font-size: 30px;
   font-weight: 400;
@@ -88,26 +88,177 @@ header .headImg {
 }
 .dignity .dignity_1 {
   float: left;
-  width: 567px;
-  margin-left: 80px;
-  width: 526px;
-  height: 63px;
+  width: 600px;
+  margin: -30px 0 0 50px;
+  height: 0px;
   color: #333333;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+}
+.dignity .dignity_1 li {
   list-style-type: none;
+  background: url(../image/2-layers.png) no-repeat 0px 20px;
+  padding: 16px 0 0 41px;
+  margin-top: 14px;
 }
 .dignity .dignity_2 {
   float: left;
-  width: 567px;
-  margin-left: 80px;
-  width: 526px;
-  height: 63px;
+  width: 600px;
+  margin: -30px 0 0 50px;
+  height: 0px;
   color: #333333;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  list-style-type: none;
   float: right;
+  margin-right: 37px;
+}
+.dignity .dignity_2 li {
+  list-style-type: none;
+  background: url(../image/2-layers.png) no-repeat 0px 20px;
+  padding: 16px 0 0 41px;
+  margin-top: 14px;
+}
+.scrinshots {
+  height: 487px;
+}
+.scrinshots h2 {
+  color: #445161;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 36px;
+  text-align: center;
+  padding: 50px 0 30px 0;
+}
+.scrinshots .descriptions {
+  width: 1154px;
+  margin: 0 auto;
+}
+.scrinshots .descriptions .descr {
+  width: 574px;
+}
+.scrinshots .descriptions .descr img {
+  float: left;
+  margin: 0 15px 0 -15px;
+}
+.scrinshots .descriptions .descr h3 {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 30px;
+  color: #445161;
+}
+.scrinshots .descriptions .descr p {
+  color: #333333;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+.scrinshots .descriptions .descr_1 {
+  float: left;
+}
+.scrinshots .descriptions .descr_2 {
+  float: right;
+  margin-right: -12px;
+}
+.scrinshots .descriptions .descr_3 {
+  clear: both;
+  float: left;
+  margin-top: 30px;
+}
+.scrinshots .descriptions .descr_4 {
+  float: right;
+  margin: 30px -12px 0 0;
+}
+.reviews {
+  height: 425px;
+  background-color: #f5f5f5;
+}
+.reviews h2 {
+  color: #445161;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 36px;
+  text-align: center;
+  padding: 50px 0 30px 0;
+}
+.reviews .comments {
+  width: 1154px;
+  margin: 0 auto;
+}
+.reviews .comments .descr {
+  width: 574px;
+}
+.reviews .comments .descr img {
+  float: left;
+  margin: 0 15px 0 -15px;
+}
+.reviews .comments .descr h3 {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 30px;
+  color: #445161;
+}
+.reviews .comments .descr p {
+  color: #333333;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+.reviews .comments .descr_1 {
+  float: left;
+}
+.reviews .comments .descr_2 {
+  float: right;
+  margin-right: -12px;
+}
+.reviews .comments .descr_3 {
+  clear: both;
+  float: left;
+  margin-top: 30px;
+}
+.reviews .comments .descr_4 {
+  float: right;
+  margin: 30px -12px 0 0;
+}
+.reviews .comments .comm {
+  width: 574px;
+  background: url(../image/bg_review.png) no-repeat 91px 0;
+  margin-left: -15px;
+}
+.reviews .comments .comm img {
+  float: left;
+  padding-right: 43px;
+}
+.reviews .comments .comm p {
+  padding: 12px 16px 0 0;
+  color: #333333;
+  font-style: italic;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+}
+.reviews .comments .comm address {
+  color: #989898;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  font-style: normal;
+  margin-left: 118px;
+}
+.reviews .comments .comm_1 {
+  float: left;
+}
+.reviews .comments .comm_2 {
+  float: right;
+  margin-right: -12px;
+}
+.reviews .comments .comm_3 {
+  clear: both;
+  float: left;
+  margin-top: 24px;
+}
+.reviews .comments .comm_4 {
+  float: right;
+  margin: 24px -12px 0 0;
 }
