--- a/feelgood/3. Основная программа/урок 1/дз/style/style.less
+++ b/feelgood/3. Основная программа/урок 1/дз/style/style.less
@@ -81,7 +81,7 @@ header {
 .dignity {
     height: 418px;
     background-color: #f5f5f5;
-    h2 {
+    .h2 {
         color: #445161;
         font-size: 30px;
         font-weight: 400;
@@ -91,19 +91,121 @@ header {
     }
     .dignity_1 {
         float: left;
-        width: 567px;
-        margin-left: 80px;
-        width: 526px;
-        height: 63px;
+        width: 600px;
+        margin: -30px 0 0 50px;
+        height: 0px;
         color: #333333;
         font-size: 16px;
         font-weight: 400;
         line-height: 24px;
-        list-style-type: none;
-
+        li {
+            list-style-type: none;
+            background: url(../image/2-layers.png) no-repeat 0px 20px;
+            padding: 16px 0 0 41px;
+            margin-top: 14px;
+        }
     }
     .dignity_2 {
         .dignity_1;
         float: right;
+        margin-right: 37px;
+    }
+}
+
+.scrinshots {
+    height: 487px;
+    h2 {
+        .dignity.h2;
+    }
+    .descriptions {
+        width: 1154px;
+        margin: 0 auto;
+        .descr {
+            width: 574px;
+            img {
+                float: left;
+                margin: 0 15px 0 -15px;
+            }
+            h3 {
+                font-size: 24px;
+                font-weight: 400;
+                line-height: 30px;
+                color: #445161;
+            }
+            p {
+                color: #333333;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 24px;
+            }
+        }
+        .descr_1 {
+            float: left;
+        }
+        .descr_2 {
+            float: right;
+            margin-right: -12px;
+        }
+        .descr_3 {
+            clear: both;
+            float: left;
+            margin-top: 30px;
+        }
+        .descr_4 {
+            float: right;
+            margin: 30px -12px 0 0;
+        }
+    }
+}
+
+.reviews {
+    height: 425px;
+    background-color: #f5f5f5;
+    h2 {
+        .dignity.h2;
+    }
+    .comments {
+        .scrinshots.descriptions;
+        .comm {
+            width: 574px;
+            background: url(../image/bg_review.png) no-repeat 91px 0;
+            margin-left: -15px;
+            img {
+                float: left;
+                padding-right: 43px;
+            }
+            p {
+                padding: 12px 16px 0 0;
+                color: #333333;
+                font-style: italic;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 18px;
+            }
+            address {
+                color: #989898;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 18px;
+                font-style: normal;
+                margin-left: 118px;
+            }
+        }
+        .comm_1 {
+            float: left;
+        }
+        .comm_2 {
+            float: right;
+            margin-right: -12px;
+        }
+        .comm_3 {
+            clear: both;
+            float: left;
+            margin-top: 24px;
+        }
+        .comm_4 {
+            float: right;
+            margin: 24px -12px 0 0 ;
+        }
     }
 }
