--- a/feelgood/3. Основная программа/урок 1/дз/style/style.less
+++ b/feelgood/3. Основная программа/урок 1/дз/style/style.less
@@ -205,7 +205,64 @@ header {
         }
         .comm_4 {
             float: right;
-            margin: 24px -12px 0 0 ;
+            margin: 24px -12px 0 0;
+        }
+    }
+}
+
+.buy_now {
+    height: 656px;
+    h2 {
+        .dignity.h2;
+    }
+    .product {
+        margin: 0 auto;
+        width: 990px;
+        height: 499px;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        .standart {
+            width: 300px;
+            height: 306px;
+        }
+        .premium {
+            width: 300px;
+            height: 404px;
+        }
+        .lux {
+            width: 300px;
+            height: 499px;
+        }
+        div {
+            background-color: #445162;
+            border-radius: 5px;
+            h3 {
+                color: #ffffff;
+                font-size: 24px;
+                font-weight: 400;
+                line-height: 51px;
+                text-align: center;
+            }
+            .price {
+                width: 296px;
+                height: 71px;
+                border: 2px solid #445162;
+                background-color: #ffffff;
+                color: #445162;
+                font-size: 40px;
+                font-weight: 400;
+                line-height: 71px;
+                text-align: center;
+            }
+            ol {
+                padding: 19px 0 0 20px;
+                list-style-position: inside;
+                color: #ffffff;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 24px;
+            }
         }
     }
 }
